# quadruped_robot_2023

./: .gitignore  README.md  run_sim.sh
.catkin_tools/profiles/default/: devel_collisions.txt
logs/aliengoZ1_description/: build.cmake.000.log.stderr
logs/hardware_ctrl/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.011.log.stderr  build.make.041.log.stderr  build.make.046.log.stderr  build.make.075.log.stderr  build.make.077.log.stderr  build.make.078.log.stderr  build.make.089.log.stderr  build.make.095.log.stderr  build.make.108.log.stderr  build.make.109.log.stderr  build.make.110.log.stderr
logs/mpc_ctrl/: build.cmake.000.log.stderr  build.cmake.061.log.stderr
logs/unitree_controller/: build.cmake.000.log.stderr
logs/unitree_gazebo/: build.symlink.000.log.stderr
logs/unitree_guide/: build.make.001.log.stderr
logs/unitree_legged_control/: build.cmake.000.log.stderr
logs/unitree_legged_msgs/: build.make.000.log.stderr
src/: README.md
src/ctrl/: CMakeLists.txt  package.xml
src/ctrl/config/: param.yaml
src/ctrl/include/: GazeboROS.h  HardwareROS.h  Kinematics.h  RobotControl.h  Utils.h  comm.h
src/ctrl/src/: BasicEKF.cpp  ConvexMpc.cpp  GazeboROS.cpp  HardwareROS.cpp  Kinematics.cpp  MainGazebo.cpp  MainHardware.cpp  RobotControl.cpp  UnitreeDriver.cpp  Utils.cpp  stm32_communication.cpp
src/ctrl/src/include/: BasicEKF.h  ConvexMpc.h  CtrlStates.h  HardwareROS.h  Param.h  RobotControl.h  UnitreeDriver.h  filter.hpp
src/fdilink_ahrs/: wheeltec_udev.sh
src/fdilink_ahrs/launch/: ahrs_data.launch
src/hardware_ctrl/: CMakeLists.txt  package.xml
src/hardware_ctrl/config/: standup.yaml
src/hardware_ctrl/include/unitreeMotor/include/: motor_msg.h
src/hardware_ctrl/launch/: standup.launch
src/hardware_ctrl/msg/: motorcmd.msg  motordata.msg
src/hardware_ctrl/src/: IOROS.cpp  IOROS.h  IOROS_main.cpp  UnitreeDriver.cpp  UnitreeDriver.h  imu_communication.cpp  motor_communication.cpp  standup.cpp  stm32_communication.cpp
src/model/: CMakeLists.txt  package.xml
src/model/launch/: display.launch  gazebo.launch
src/model/meshes/: FL_hip.dae  RL_calf.dae  RR_calf.dae
src/model/urdf/: dog.urdf
src/model/xacro/: dog.xacro
src/mpc_ctrl/include/: BasicEKF.h  CtrlStates.h  GazeboROS.h  HardwareROS.h  Kinematics.h  Param.h  RobotControl.h  Utils.h
src/mpc_ctrl/launch/: mpc_ctrl.launch
src/mpc_ctrl/src/: BasicEKF.cpp  HardwareROS.cpp  MainGazebo.cpp  MainHardware.cpp  RobotControl.cpp  Utils.cpp
src/stm32_communication/: CMakeLists.txt  package.xml
src/stm32_communication/launch/: stm32_Communication.launch
src/stm32_communication/src/: UnitreeDriver.cpp  UnitreeDriver.h  stm32_communication.cpp
src/unitree_guide/: CMakeLists.txt  motordata.msg
src/unitree_guide/include/common/: enumClass.h  unitreeLeg.h
src/unitree_guide/include/interface/: IOROS.h
src/unitree_guide/include/message/: LowlevelCmd.h
src/unitree_guide/launch/: 123123.launch  gazeboSim.launch
src/unitree_guide/src/FSM/: FSM.cpp
src/unitree_guide/src/interface/: IOROS.cpp
src/unitree_legged_msgs/: CMakeLists.txt
src/unitree_legged_msgs/msg/: LowCmd.msg  MotorCmd.msg  MotorState.msg
src/unitree_ros/robots/our_model/: CMakeLists.txt  package.xml
src/unitree_ros/robots/our_model/config/: robot_control.yaml
src/unitree_ros/robots/our_model/meshes/: FL_calf.dae  FR_calf.dae  FR_hip.dae  RL_hip.dae  RR_hip.dae
src/unitree_ros/robots/our_model/urdf/: dog.csv  dog.gv
src/unitree_ros/unitree_controller/src/: body.cpp
