<?xml version="1.0"?>
<package>
  <name>mpc_ctrl</name>
  <version>0.0.1</version>
  <description>The mpc_ctrl package</description>
  <maintainer email="1747045175@qq.com">Frank</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>unitree_legged_msgs</run_depend>
</package>