<?xml version="1.0"?>
<package format="2">
	<name>dog_model</name>
	<version>1.0.0</version>
    <description>dog's model for simulation</description>
	<author>Frank</author>
	<maintainer email="1747045175@qq.com" />
	<license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>